Tests/CompilerTests/negative/invalid-binding-declaration.expected
negative/invalid-binding-declaration.hylo:6.7-13: error: tuple pattern cannot match values of type 'A'
  let (x, y): A = a
      ~~~~~~
